--- a/Views/Orders/SavePaymentMethod.cshtml
+++ b/Views/Orders/SavePaymentMethod.cshtml
@@ -74,9 +74,10 @@
                     </div>
 
                     <div class="mb-3 form-check">
-                        <input type="checkbox" name="acceptTerms" id="acceptTerms" class="form-check-input" required />
+                        <input type="hidden" name="acceptTerms" value="false" />
+                        <input type="checkbox" name="acceptTerms" id="acceptTerms" value="true" class="form-check-input" required />
                         <label class="form-check-label" for="acceptTerms">
-                            I agree that my card will be charged after delivery is completed. Payment processing fees may apply.
+                            I agree that my card will be charged after delivery is completed. Payment processing fees may apply. I have reviewed the <a href="/Account/Terms" target="_blank" rel="noopener">Terms and Conditions</a>.
                         </label>
                     </div>
                     
