--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -35,6 +35,10 @@
                     <input type="password" class="form-control" id="password" name="password" required />
                 </div>
 
+                <div class="text-end mb-3">
+                    <a href="/Account/ForgotPassword">Forgot password?</a>
+                </div>
+
                 <button type="submit" class="btn btn-primary w-100">Log In</button>
             </form>
 
